--- a/src/components/layout/FbContent/index.scss
+++ b/src/components/layout/FbContent/index.scss
@@ -16,6 +16,8 @@
   &__content {
     overflow: hidden;
     flex-grow: 1;
+
+    @include flex-inner;
   }
 
   &__footer {
@@ -50,6 +52,7 @@
       overflow-y: auto;
       -ms-overflow-style: none; /* Internet Explorer 10+ */
       scrollbar-width: none; /* Firefox */
+      justify-content: center;
 
       @include flex-column;
 
