--- a/src/components/ui/FbSwipeActions/SwipeOut/index.scss
+++ b/src/components/ui/FbSwipeActions/SwipeOut/index.scss
@@ -24,7 +24,7 @@
   }
 
   &__content {
-    transition: transform .2s;
+    transition: transform 0.2s;
     will-change: transform;
     width: 100%;
   }
