--- a/src/assets/components/layout/fb-off-canvas.scss
+++ b/src/assets/components/layout/fb-off-canvas.scss
@@ -16,9 +16,9 @@ $off-canvas-button-color: $color-primary-contrast;
 $off-canvas-button-font-size: 2.5rem;
 $off-canvas-button-line-height: 5rem;
 $off-canvas-overlay-color: rgb(0 0 0 / 50%);
-$off-canvas-overlay-zindex: $zindex-sidenav-subnav;
+$off-canvas-overlay-zindex: $zindex-off-canvas-background;
 $off-canvas-body-color: $bg-color-body;
-$off-canvas-body-zindex: ($zindex-sidenav-subnav + 10);
+$off-canvas-body-zindex: $zindex-off-canvas;
 $off-canvas-font-family: $font-family-base;
 
 @mixin flex-box {
