--- a/src/components/layout/FbSidebar/index.scss
+++ b/src/components/layout/FbSidebar/index.scss
@@ -79,7 +79,7 @@
 
 .fb-theme-layout-sidebar-overlay-enter-active,
 .fb-theme-layout-sidebar-overlay-leave-active {
-  transition: opacity .25s ease-in-out
+  transition: opacity 0.25s ease-in-out;
 }
 
 .fb-theme-layout-sidebar-overlay-enter-from,
