--- a/src/components/ui/FbModalWindow/index.scss
+++ b/src/components/ui/FbModalWindow/index.scss
@@ -159,7 +159,7 @@
 
 .fb-theme-ui-modal-enter-active,
 .fb-theme-ui-modal-leave-active {
-  transition: opacity .25s ease-in-out
+  transition: opacity 0.25s ease-in-out;
 }
 
 .fb-theme-ui-modal-enter-from,
