--- a/src/components/layout/FbOffCanvas/index.scss
+++ b/src/components/layout/FbOffCanvas/index.scss
@@ -28,20 +28,31 @@
 
 .fb-theme-layout-off-canvas-overlay-enter-active,
 .fb-theme-layout-off-canvas-overlay-leave-active {
-  transition: opacity 0.15s ease-in-out;
+  transition: opacity 0.25s ease-in-out;
 }
 
-.fb-theme-layout-off-canvas-overlay-enter,
+.fb-theme-layout-off-canvas-overlay-enter-from,
 .fb-theme-layout-off-canvas-overlay-leave-to {
   opacity: 0;
 }
 
-.fb-theme-layout-off-canvas-body-enter-active,
-.fb-theme-layout-off-canvas-body-leave-active {
-  transition: all 300ms ease-in-out;
+.fb-theme-layout-off-canvas-overlay-enter-to {
+  opacity: 1;
 }
 
-.fb-theme-layout-off-canvas-body-enter,
+.fb-theme-layout-off-canvas-body-enter-active,
+.fb-theme-layout-off-canvas-body-leave-active {
+  transition: all 0.3s ease-in-out;
+}
+
+.fb-theme-layout-off-canvas-body-enter-from {
+  right: -450px;
+}
+
+.fb-theme-layout-off-canvas-body-enter-to {
+  transform: translate(0);
+}
+
 .fb-theme-layout-off-canvas-body-leave-to {
-  transform: translateX(450px);
+  transform: translate(450px);
 }
