--- a/src/components/layout/FbUserMenu/index.scss
+++ b/src/components/layout/FbUserMenu/index.scss
@@ -4,7 +4,7 @@
   &__container {
     position: relative;
 
-    :deep(ul) {
+    ul {
       z-index: $z-index;
       position: absolute;
       top: auto;
