--- a/src/components/ui/FbItemsContainer/index.scss
+++ b/src/components/ui/FbItemsContainer/index.scss
@@ -28,7 +28,7 @@
       flex: 4 0 0;
     }
 
-    :deep(h3) {
+    h3 {
       margin: 0;
       line-height: $heading-line-height;
       font-size: $heading-font-size;
