--- a/src/components/layout/FbHeader/Heading/index.scss
+++ b/src/components/layout/FbHeader/Heading/index.scss
@@ -25,7 +25,7 @@
       text-align: right;
     }
 
-    :deep(h1) {
+    h1 {
       line-height: 6rem;
       font-size: 2.2rem;
       font-weight: $header-font-weight;
