--- a/src/components/ui/FbMediaItem/index.scss
+++ b/src/components/ui/FbMediaItem/index.scss
@@ -20,7 +20,7 @@
     -webkit-box-flex: 0;
     flex: 4 0 0;
 
-    > :deep(h3) {
+    > h3 {
       font-weight: 300;
       font-size: $media-heading-font-size;
       line-height: $media-heading-line-height;
