--- a/src/assets/components/layout/fb-content.scss
+++ b/src/assets/components/layout/fb-content.scss
@@ -11,10 +11,14 @@ $search-background: $bg-color-content;
 $screen-tablet-min: $screen-sm-min;
 $screen-tablet-max: $screen-sm-max;
 
-@mixin flex-content {
+@mixin flex-container {
   @include flex-column(nowrap);
 }
 
-@mixin flex-inner {
+@mixin flex-content {
   @include flex-row(nowrap);
+}
+
+@mixin flex-inner {
+  @include flex-column(nowrap);
 }
