--- a/src/assets/components/ui/fb-item.scss
+++ b/src/assets/components/ui/fb-item.scss
@@ -19,6 +19,10 @@ $content-color: $gray-light;
   @include flex-box-width(3.5rem);
 }
 
+@mixin item-content {
+  @include flex-column(nowrap);
+}
+
 @mixin item-button {
   @include flex-box-width(2.75rem);
 }
