--- a/src/components/ui/FbItem/index.scss
+++ b/src/components/ui/FbItem/index.scss
@@ -61,9 +61,12 @@
   &__content {
     font-size: 1.75rem;
     color: $content-color;
-    height: 100%;
     align-items: center;
+    height: 100%;
+    width: 100%;
     justify-content: center;
+
+    @include item-content;
   }
 
   &__button {
