Small visual updates

--- a/src/assets/components/layout/fb-off-canvas.scss
+++ b/src/assets/components/layout/fb-off-canvas.scss
@@ -9,15 +9,6 @@ $off-canvas-body-color: $bg-color-body;
 $off-canvas-body-zindex: $zindex-off-canvas;
 $off-canvas-font-family: $font-family-base;
 
-@mixin flex-box {
-  @include flex-row(nowrap);
-  @include box-shadow(0 3px 9px rgba(0, 0, 0, 0.5));
-}
-
-@mixin flex-heading {
-  @include flex-row(nowrap);
-}
-
-@mixin flex-heading-title {
-  @include flex-column;
+@mixin off-canvas-body {
+  @include flex-column(nowrap);
 }
