--- a/src/components/layout/FbHeader/Button/index.scss
+++ b/src/components/layout/FbHeader/Button/index.scss
@@ -13,6 +13,7 @@
     color: $header-color;
     outline: none;
     padding: 0 1rem;
+    text-decoration: none;
 
     &-small {
       height: 3rem;
