--- a/src/components/layout/FbOffCanvas/index.scss
+++ b/src/components/layout/FbOffCanvas/index.scss
@@ -23,6 +23,8 @@
     background-color: $off-canvas-body-color;
     font-family: $off-canvas-font-family;
     z-index: $off-canvas-body-zindex;
+
+    @include off-canvas-body;
   }
 }
 
