--- a/src/assets/components/layout/fb-header.scss
+++ b/src/assets/components/layout/fb-header.scss
@@ -15,8 +15,12 @@ $hamburger-bar-line-distance: 5px !default;
   @include box-shadow(0 3px 9px rgba(0, 0, 0, 0.5));
 }
 
+@mixin flex-buttons {
+  justify-content: space-between;
+
+  @include flex-row(nowrap);
+}
+
 @mixin flex-heading {
   @include flex-row(nowrap);
-
-  flex-wrap: nowrap;
 }
