--- a/src/assets/components/ui/fb-media-item.scss
+++ b/src/assets/components/ui/fb-media-item.scss
@@ -8,5 +8,5 @@ $media-heading-font-size: 2.5rem;
 $media-heading-line-height: 2.5rem;
 
 @mixin flex-media {
-  @include flex-row;
+  @include flex-row(nowrap);
 }
