--- a/src/assets/components/ui/fb-modal-window.scss
+++ b/src/assets/components/ui/fb-modal-window.scss
@@ -26,7 +26,7 @@ $modal-loader-bg-color: $bg-color-body;
 $screen-tablet-min: $screen-sm-min;
 
 @mixin modal-body-flex {
-  @include flex-column;
+  @include flex-column(nowrap);
 }
 
 @mixin modal-content-shadow {
