--- a/src/components/layout/FbContent/index.scss
+++ b/src/components/layout/FbContent/index.scss
@@ -60,7 +60,7 @@
       -ms-overflow-style: none; /* Internet Explorer 10+ */
       scrollbar-width: none; /* Firefox */
 
-      @include flex-column;
+      @include flex-column(nowrap);
 
       &::-webkit-scrollbar {
         display: none; /* Safari and Chrome */
